ремонт ошибки с пакетом

--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "build:server": "tsc -p tsconfig.server.json",
     "lint": "tsc -p tsconfig.json --noEmit && tsc -p tsconfig.server.json --noEmit",
     "prod:build": "yarn build:client && yarn build:server && bash -lc 'sudo mkdir -p /srv/www/sbertest && sudo rsync -av --delete dist/ /srv/www/sbertest/'",
-    "prod:up": "yarn dlx pm2 start ecosystem.config.cjs || yarn dlx pm2 reload sb-select",
-    "prod:logs": "yarn dlx pm2 logs sb-select",
-    "prod:status": "yarn dlx pm2 status",
-    "prod:stop": "yarn dlx pm2 stop sb-select || true",
-    "prod:delete": "yarn dlx pm2 delete sb-select || true"
+    "prod:up": "npx pm2 start ecosystem.config.cjs || npx pm2 reload sb-select",
+    "prod:logs": "npx pm2 logs sb-select",
+    "prod:status": "npx pm2 status",
+    "prod:stop": "npx pm2 stop sb-select || true",
+    "prod:delete": "npx pm2 delete sb-select || true"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.0",
