правка api для прода + визуал для тест кейсов

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sb-select",
   "private": true,
   "version": "1.0.0",
+  "type": "commonjs",
   "scripts": {
     "local:build": "yarn build:client && yarn build:server",
     "local:up": "concurrently -k -n SERVER,CLIENT \"ts-node-dev --project tsconfig.server.json --respawn --transpile-only server/index.ts\" \"webpack serve --mode development --port 3005\"",
